--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <packaging>pom</packaging>
     <properties>
         <spring-cloud.version>2022.0.0</spring-cloud.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <modules>
